--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="https://github.com/cquan7/cquan7.github.io/blob/main/PXL_20201103_183652234.MP.jpg"> 
+<img src="cquan7.github.io/PXL_20201103_183652234.MP.jpg"> 
